2001-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-toggle-inline-images): Restore hidden faces in the
	text property `w3m-hidden-face'.

	* w3m-xmas.el (w3m-setup-header-line): Don't inherit existing text
	properties in a header line.

	* w3m-xmas.el (w3m-insert-image): Hide a face in the text property
	`w3m-hidden-face' if it is underlined, instead of the removing.
	* w3m-e21.el (w3m-insert-image): Ditto.

2001-05-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (top-level): Fixed argument of autoload for `w3m-dtree',
	and added autoload for `w3m-about-dtree'.

	* w3m-dtree.el (w3m-dtree): Fixed doc-string.

2001-05-15  "Takayuki Nakagawa"  <tknakaga@kanagawa.hitachi.co.jp>

	* w3m.el (w3m-goto-ftp-url): Use `file-directory-p' instead of
	file name suffix to distinguish directories and files.
	(w3m-time-parse-string (for buggy timezone.el)): Ignore errors
	occured in `encode-time'.

2001-05-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-dtree.el (top-level): Require `w3m' to suppress byte-compile
	warnings.

2001-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-this-url): Message if there is no link.
	(w3m-cursor-anchor): Redefine as a macro for byte-optimization.
	(w3m-action, w3m-image, w3m-anchor): Redefine as a macro using
	`w3m-get-text-property-around'.
	(w3m-get-text-property-around): New macro.

2001-05-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-exec): Report a process exit status if an error has
	occurred.
	(w3m-download): Ditto.
	(w3m-w3m-dump-source): Don't use `zerop' to check for a process
	exit status.
	(w3m-w3m-dump-head-source): Ditto.
	(w3m-w3m-get-header): Ditto.
	(w3m-exec-process): Made it to return t if succeeded otherwise nil,
	to keep a process exit status in `w3m-process-exit-status'.
	(w3m-process-exit-status): New variable.

2001-05-15  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (TOP): Add autoload for w3m-dtree.